tests/invalid/borrow_error/immutable_borrow.facet
fn f(x: unrestricted isize) -> unrestricted &mut unrestricted isize {
    (&mut x)
}
